# sentinel_project

./: README.md
ecu_status/: CMakeLists.txt  auto_system.proto  conanfile.py
ecu_status/config/: client_shell.json
ecu_status/src/clients/: shell_client.cpp  telemetry_client.cpp
ecu_status/src/common/: logger.hpp  vshield_common.hpp
ecu_status/src/server/: main_server.cpp
vehicle_status/: CMakeLists.txt  auto_system.proto  conanfile.py  main_client.cpp  main_server.cpp  vsomeip.json
